# adsorbgen

./: .gitignore  README.md  adsorbgen.py  config_example.yaml  molecules.py  placement.py  pyproject.toml  validation.py
adsorbgen/: __init__.py  chemistry.py  cli.py  placement.py  validation.py
