[project]
name = "adsorbgen"
version = "0.1.0"
description = "Adsorption configuration generator for VASP"
requires-python = ">=3.8"
dependencies = ["ase", "numpy", "pyyaml"]

[project.scripts]
adsorbgen = "adsorbgen.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
adsorbgen = ["config_example.yaml"]
